--- a/app/admin/globals.css
+++ b/app/admin/globals.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 5px;
+    height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #000;
+    background-color: #086CDD;
 }
+
+
+
