still in progress the cars was added in the front in dynamic manner

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,3 +85,62 @@
     outline: 2px solid transparent;
     outline-offset: 2px;
 }
+
+img{
+    max-height: 100%;
+}
+.image-container {
+    width: 100%;
+    height: 200px; /* Ajustez la hauteur selon vos besoins */
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/*input, textarea{
+    @apply border border-gray-300 rounded-md px-1 w-full;
+    @apply mb-2
+}
+input:focus, textarea:focus{
+    @apply border-blue-900;
+}
+h1{
+    @apply text-blue-900 mb-2 text-xl;
+}
+label{
+    @apply text-blue-900
+}
+.btn-primary{
+    @apply bg-blue-900 text-white px-4 py-1 rounded-md
+}
+table.basic{
+    @apply w-full
+}
+
+table.basic thead tr td {
+    @apply bg-blue-100
+}
+
+table.basic a{
+    @apply bg-blue-900 text-white text-sm py-1 px-2
+    rounded-md inline-flex gap-1 mr-1
+}
+
+table.basic tr td{
+    @apply border border-blue-200 p-1
+}
+
+.btn-red{
+    @apply bg-red-800 text-white
+}
+
+.btn-default{
+    @apply bg-gray-500 text-white
+}
+
+.btn-default, .btn-red{
+    @apply px-4 py-1 rounded-md
+}*/
