--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -91,7 +94,11 @@ img{
 }
 .image-container {
     width: 100%;
-    height: 200px; /* Ajustez la hauteur selon vos besoins */
+    height: 250px; /* Ajustez la hauteur selon vos besoins */
+}
+.image1-container {
+    width: 100%;
+    height: 350px; /* Ajustez la hauteur selon vos besoins */
 }
 
 .image-container img {
@@ -99,7 +106,95 @@ img{
     height: 100%;
     object-fit: cover;
 }
+.image1-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
+body {
+    font-family: 'Inter', sans-serif;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Manrope", sans-serif;
+}
+
+/* START: General styles */
+.max-width {
+    @apply max-w-[1440px] mx-auto;
+}
+
+.padding-x {
+    @apply sm:px-16 px-6;
+}
+
+
+
+.custom-btn {
+    @apply flex flex-row relative justify-center items-center py-3 px-6 outline-none;
+}
+/* END: General styles */
+
+/* START: Hero styles */
+.hero {
+    @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto;
+}
+
+.hero__title {
+    @apply 2xl:text-[60px] sm:text-[46px] text-[40px] font-extrabold;
+}
+
+
+
+
+.hero__image {
+    @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
+}
+
+.hero__image-overlay {
+    @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
+}
+/* END: Hero styles */
+
+/* START: Home styles */
+
+
+/* END: Custom Filter styles */
+
+/* START: Footer styles */
+.hero__subtitle {
+    @apply text-[27px] text-black-100 font-light mt-5;
+}
+.hero__image-container {
+    @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
+}
+
+.footer__links-container {
+    @apply flex max-md:flex-col flex-wrap justify-between gap-5 sm:px-16 px-6 py-10;
+}
+
+.footer__rights {
+    @apply flex flex-col justify-start items-start gap-6;
+}
+
+.footer__links {
+    @apply flex-1 w-full flex md:justify-end flex-wrap max-md:mt-10 gap-20;
+}
+
+.footer__link {
+    @apply flex flex-col gap-6 text-base min-w-[170px];
+}
+
+.footer__copyrights {
+    @apply flex justify-between items-center flex-wrap mt-10 border-t border-gray-100 sm:px-16 px-6 py-10;
+}
+
+.footer__copyrights-link {
+    @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
+}
 /*input, textarea{
     @apply border border-gray-300 rounded-md px-1 w-full;
     @apply mb-2
@@ -144,3 +239,89 @@ table.basic tr td{
 .btn-default, .btn-red{
     @apply px-4 py-1 rounded-md
 }*/
+.payment-details {
+    background-color: #fde2e2;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.payment-details h2 {
+    font-size: 24px;
+    margin-bottom: 16px;
+    color: #dc3545;
+}
+
+.personal-details {
+    background-color: #f2f8ff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.personal-details h2 {
+    font-size: 24px;
+    margin-bottom: 16px;
+    color: #007bff;
+}
+.account-details {
+    background-color: #f7f7f7;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.account-details h2 {
+    font-size: 24px;
+    margin-bottom: 16px;
+    color: #333;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-wrapper {
+    align-self: center;
+}
+
+.form-element {
+    width: 480px;
+}
+
+.form-separator {
+    margin-top: 40px;
+    display: block;
+    height: 1px;
+    background-color: #ccc;
+}
+
+.form-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.step-counter {
+    align-self: center;
+}
+
+.prev-button {
+    margin-right: 16px;
+}
+
+.next-button {
+    min-width: 120px;
+}
+
+/* Styles for validation icons */
+.k-icon.k-i-check,
+.k-icon.k-i-close {
+    color: #007bff;
+    vertical-align: middle;
+    margin-left: 8px;
+}
