--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,126 +1,326 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.cookie-card {
-    max-width: 320px;
-    padding: 1rem;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
-}
 
-.title {
-    font-weight: 600;
-    color: rgb(31 41 55);
-}
-
-.description {
-    margin-top: 1rem;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    color: rgb(75 85 99);
-}
-
-.description a {
-    --tw-text-opacity: 1;
-    color: rgb(59 130 246);
-}
-
-.description a:hover {
-    -webkit-text-decoration-line: underline;
-    text-decoration-line: underline;
-}
-
-.actions {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1rem;
-    -moz-column-gap: 1rem;
-    column-gap: 1rem;
-    flex-shrink: 0;
-}
-
-.pref {
-    font-size: 0.75rem;
-    line-height: 1rem;
-    color: rgb(31 41 55 );
-    -webkit-text-decoration-line: underline;
-    text-decoration-line: underline;
-    transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
-    border: none;
-    background-color: transparent;
-}
-
-.pref:hover {
-    color: rgb(156 163 175);
-}
-
-.pref:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-}
-
-.accept {
-    font-size: 0.75rem;
-    line-height: 1rem;
-    background-color: rgb(17 24 39);
-    font-weight: 500;
-    border-radius: 0.5rem;
-    color: #fff;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 0.625rem;
-    padding-bottom: 0.625rem;
-    border: none;
-    transition: all .15s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.accept:hover {
-    background-color: rgb(55 65 81);
-}
-
-.accept:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-}
-
-img{
-    max-height: 100%;
-}
-.image-container {
-    width: 100%;
-    height: 250px; /* Ajustez la hauteur selon vos besoins */
-}
-.image1-container {
-    width: 100%;
-    height: 350px; /* Ajustez la hauteur selon vos besoins */
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.image1-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-body {
-    font-family: 'Inter', sans-serif;
-}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Manrope", sans-serif;
 }
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+:root {
+    --poppins: 'Poppins', sans-serif;
+    --lato: 'Lato', sans-serif;
+
+    --light: #F9F9F9;
+    --blue: #3C91E6;
+    --light-blue: #CFE8FF;
+    --grey: #eee;
+    --dark-grey: #AAAAAA;
+    --dark: #342E37;
+    --red: #DB504B;
+    --yellow: #FFCE26;
+    --light-yellow: #FFF2C6;
+    --orange: #FD7238;
+    --light-orange: #FFE0D3;
+}
+
+
+/* SIDEBAR */
+#sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background: var(--light);
+    z-index: 2000;
+    font-family: var(--lato);
+    transition: .3s ease;
+    overflow-x: hidden;
+    scrollbar-width: none;
+}
+
+#sidebar.hide {
+    width: 60px;
+}
+
+#sidebar .brand {
+    font-size: 24px;
+    font-weight: 700;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    color: var(--blue);
+    position: sticky;
+    top: 0;
+    left: 0;
+    background: var(--light);
+    z-index: 500;
+    padding-bottom: 20px;
+    box-sizing: content-box;
+}
+
+#sidebar .brand .bx {
+    min-width: 60px;
+    display: flex;
+    justify-content: center;
+}
+
+#sidebar .side-menu {
+    width: 100%;
+    margin-top: 48px;
+}
+
+#sidebar .side-menu li {
+    height: 48px;
+    background: transparent;
+    margin-left: 6px;
+    border-radius: 48px 0 0 48px;
+    padding: 4px;
+}
+
+#sidebar .side-menu li.active {
+    background: var(--grey);
+    position: relative;
+}
+
+#sidebar .side-menu li.active::before {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: -40px;
+    right: 0;
+    box-shadow: 20px 20px 0 var(--grey);
+    z-index: -1;
+}
+
+#sidebar .side-menu li.active::after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    bottom: -40px;
+    right: 0;
+    box-shadow: 20px -20px 0 var(--grey);
+    z-index: -1;
+}
+
+#sidebar .side-menu li a {
+    width: 100%;
+    height: 100%;
+    background: var(--light);
+    display: flex;
+    align-items: center;
+    border-radius: 48px;
+    font-size: 16px;
+    color: var(--dark);
+    white-space: nowrap;
+    overflow-x: hidden;
+}
+
+#sidebar .side-menu.top li.active a {
+    color: var(--blue);
+}
+
+#sidebar.hide .side-menu li a {
+    width: calc(48px - (4px * 2));
+    transition: width .3s ease;
+}
+
+#sidebar .side-menu li a.logout {
+    color: var(--red);
+}
+
+#sidebar .side-menu.top li a:hover {
+    color: var(--blue);
+}
+
+#sidebar .side-menu li a .bx {
+    min-width: calc(60px  - ((4px + 6px) * 2));
+    display: flex;
+    justify-content: center;
+}
+/* SIDEBAR */
+
+
+/* CONTENT */
+#content {
+    position: relative;
+    width: calc(100% - 280px);
+    left: 280px;
+    transition: .3s ease;
+}
+
+#sidebar.hide ~ #content {
+    width: calc(100% - 60px);
+    left: 60px;
+}
+
+/* NAVBAR */
+#content nav {
+    height: 56px;
+    padding: 0 44px;
+    display: flex;
+    align-items: center;
+    grid-gap: 24px;
+    font-family: var(--lato);
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+/* NAVBAR */
+
+
+
+/* MAIN */
+
+#content main {
+    width: 100%;
+    padding: 20px 25px;
+    margin: 20px 0px;
+    font-family: var(--poppins);
+    max-height: calc(100vh - 56px);
+    overflow-y: auto;
+}
+#content main .head-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    grid-gap: 16px;
+    flex-wrap: wrap;
+}
+#content main .head-title .left h1 {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: var(--dark);
+}
+#content main .head-title .left .breadcrumb {
+    display: flex;
+    align-items: center;
+    grid-gap: 16px;
+}
+#content main .head-title .left .breadcrumb li {
+    color: var(--dark);
+}
+#content main .head-title .left .breadcrumb li a {
+    color: var(--dark-grey);
+    pointer-events: none;
+}
+#content main .head-title .left .breadcrumb li a.active {
+    color: var(--blue);
+    pointer-events: unset;
+}
+
+#content main .box-info {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: 24px;
+    margin-top: 36px;
+}
+#content main .box-info li {
+    padding: 24px;
+    background: var(--light);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    grid-gap: 24px;
+}
+#content main .box-info li .bx {
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#content main .box-info li:nth-child(1) .bx {
+    background: var(--light-blue);
+    color: var(--blue);
+}
+#content main .box-info li:nth-child(2) .bx {
+    background: var(--light-yellow);
+    color: var(--yellow);
+}
+#content main .box-info li:nth-child(3) .bx {
+    background: var(--light-orange);
+    color: var(--orange);
+}
+#content main .box-info li .text h3 {
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--dark);
+}
+#content main .box-info li .text p {
+    color: var(--dark);
+}
+
+#content main .table-data {
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 24px;
+    margin-top: 24px;
+    width: 100%;
+    color: var(--dark);
+}
+#content main .table-data > div {
+    border-radius: 20px;
+    background: var(--light);
+    padding: 24px;
+    overflow-x: auto;
+}
+#content main .table-data .head {
+    display: flex;
+    align-items: center;
+    grid-gap: 16px;
+    margin-bottom: 24px;
+}
+#content main .table-data .head h3 {
+    margin-right: auto;
+    font-size: 24px;
+    font-weight: 600;
+}
+#content main .table-data .head .bx {
+    cursor: pointer;
+}
+
+#content main .table-data .order {
+    flex-grow: 1;
+    flex-basis: 500px;
+}
+#content main .table-data .order table {
+    width: 100%;
+    border-collapse: collapse;
+}
+#content main .table-data .order table th {
+    padding-bottom: 12px;
+    font-size: 13px;
+    text-align: left;
+    border-bottom: 1px solid var(--grey);
+}
+/* MAIN */
+
+
+
+
+
+
 
 /* START: General styles */
 .max-width {
@@ -195,133 +395,37 @@ body {
 .footer__copyrights-link {
     @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
 }
-/*input, textarea{
-    @apply border border-gray-300 rounded-md px-1 w-full;
-    @apply mb-2
+/*style page acceuil image bas*/
+
+img{
+    max-height: 100%;
 }
-input:focus, textarea:focus{
-    @apply border-blue-900;
+.image-container {
+    width: 100%;
+    height: 250px; /* Ajustez la hauteur selon vos besoins */
 }
-h1{
-    @apply text-blue-900 mb-2 text-xl;
-}
-label{
-    @apply text-blue-900
-}
-.btn-primary{
-    @apply bg-blue-900 text-white px-4 py-1 rounded-md
-}
-table.basic{
-    @apply w-full
+.image1-container {
+    width: 100%;
+    height: 350px; /* Ajustez la hauteur selon vos besoins */
 }
 
-table.basic thead tr td {
-    @apply bg-blue-100
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.image1-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-table.basic a{
-    @apply bg-blue-900 text-white text-sm py-1 px-2
-    rounded-md inline-flex gap-1 mr-1
+body {
+    font-family: 'Inter', sans-serif;
 }
-
-table.basic tr td{
-    @apply border border-blue-200 p-1
-}
-
-.btn-red{
-    @apply bg-red-800 text-white
-}
-
-.btn-default{
-    @apply bg-gray-500 text-white
-}
-
-.btn-default, .btn-red{
-    @apply px-4 py-1 rounded-md
-}*/
-.payment-details {
-    background-color: #fde2e2;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.payment-details h2 {
-    font-size: 24px;
-    margin-bottom: 16px;
-    color: #dc3545;
-}
-
-.personal-details {
-    background-color: #f2f8ff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.personal-details h2 {
-    font-size: 24px;
-    margin-bottom: 16px;
-    color: #007bff;
-}
-.account-details {
-    background-color: #f7f7f7;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.account-details h2 {
-    font-size: 24px;
-    margin-bottom: 16px;
-    color: #333;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.form-wrapper {
-    align-self: center;
-}
-
-.form-element {
-    width: 480px;
-}
-
-.form-separator {
-    margin-top: 40px;
-    display: block;
-    height: 1px;
-    background-color: #ccc;
-}
-
-.form-buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 40px;
-}
-
-.step-counter {
-    align-self: center;
-}
-
-.prev-button {
-    margin-right: 16px;
-}
-
-.next-button {
-    min-width: 120px;
-}
-
-/* Styles for validation icons */
-.k-icon.k-i-check,
-.k-icon.k-i-close {
-    color: #007bff;
-    vertical-align: middle;
-    margin-left: 8px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Manrope", sans-serif;
 }
