Adding a modal in more details

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -183,6 +183,8 @@ li {
     left: 0;
     z-index: 1000;
 }
+
+
 /* NAVBAR */
 
 
@@ -428,4 +430,22 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: "Manrope", sans-serif;
+}
+
+.fade-enter {
+    opacity: 0.01;
+}
+
+.fade-enter-active {
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+}
+
+.fade-exit {
+    opacity: 1;
+}
+
+.fade-exit-active {
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
 }
