--- a/styles/globals.css
+++ b/styles/globals.css
@@ -183,6 +183,13 @@ li {
     left: 0;
     z-index: 1000;
 }
+#content nav .profile img {
+    width: 10px;
+    height: 10px;
+    object-fit: cover;
+    border-radius: 100%;
+
+}
 
 
 /* NAVBAR */
@@ -194,7 +201,7 @@ li {
 #content main {
     width: 100%;
     padding: 20px 25px;
-    margin: 20px 0px;
+    margin: 20px;
     font-family: var(--poppins);
     max-height: calc(100vh - 56px);
     overflow-y: auto;
