--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .container {
     max-width: 1000px;
     margin-left: auto;
@@ -233,41 +232,25 @@ li {
     object-fit: cover;
     border-radius: 100%;
 }
-
-#content nav form {
-    max-width: 400px;
-    width: 100%;
-    margin-right: auto;
+#content nav .notification {
+    font-size: 20px;
+    position: relative;
 }
-#content nav form .form-input {
-    display: flex;
-    align-items: center;
-    height: 36px;
-}
-#content nav form .form-input input {
-    flex-grow: 1;
-    padding: 0 16px;
-    height: 100%;
-    border: none;
-    background: var(--grey);
-    border-radius: 36px 0 0 36px;
-    outline: none;
-    width: 100%;
-    color: var(--dark);
-}
-#content nav form .form-input button {
-    width: 36px;
-    height: 100%;
+#content nav .notification .num {
+    position: absolute;
+    top: -6px;
+    right: -6px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid var(--light);
+    background: var(--red);
+    color: var(--light);
+    font-weight: 700;
+    font-size: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--blue);
-    color: var(--light);
-    font-size: 18px;
-    border: none;
-    outline: none;
-    border-radius: 0 36px 36px 0;
-    cursor: pointer;
 }
 
 /* NAVBAR */
@@ -298,6 +281,15 @@ input:checked ~ .toggle__line {
 /* Toggle button manage Admin*/
 
 /*Tableau Admin*/
+.reserved-day {
+    background-color: red !important;
+    cursor: not-allowed;
+}
+
+.maintenance-day {
+    background-color: yellow !important;
+    cursor: not-allowed;
+}
 
 .available-day {
     background-color: lightgreen !important;
@@ -582,8 +574,3 @@ body {
     opacity: 0.01;
     transition: opacity 300ms ease-in;
 }
-
-
-/*
-Calendar*/
-
