--- a/styles/globals.css
+++ b/styles/globals.css
@@ -232,26 +232,7 @@ li {
     object-fit: cover;
     border-radius: 100%;
 }
-#content nav .notification {
-    font-size: 20px;
-    position: relative;
-}
-#content nav .notification .num {
-    position: absolute;
-    top: -6px;
-    right: -6px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    border: 2px solid var(--light);
-    background: var(--red);
-    color: var(--light);
-    font-weight: 700;
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 /* NAVBAR */
 
@@ -312,7 +293,9 @@ input:checked ~ .toggle__line {
 }
 /*Tableau Admin*/
 
+/*ESSAIE*/
 
+/*ESSAIE*/
 
 /* MAIN */
 
